# pluginManager

./: .gitignore  .gitmodules  CMakeLists.txt
plugin_manager/: CMakeLists.txt
plugin_manager/file_manager/: CMakeLists.txt
plugin_manager/file_manager/include/: fileManager.hh
plugin_manager/file_manager/source/: fileManager.cc
plugin_manager/header/: pluginManager.hh
src/: Makefile  actor.hh  bye.cc  bye.hh  fileManager.cc  fileManager.hh  greetPlugin.cc  greetPlugin.hh  hello.cc  hello.hh  helloPlugin.cc  helloPlugin.hh  main.cc  plugin.hh  pluginManager.cc  pluginManager.hh  pmDefs.hh  stuff.cc  stuff.hh  stuffPlugin.cc  stuffPlugin.hh  thing.cc  thing.hh
test/: CMakeLists.txt  main.cc
test/actor/: CMakeLists.txt
test/actor/header/: actor.hh
test/greet/: CMakeLists.txt  greetPlugin.cc
test/greet/bunny/: CMakeLists.txt  hello.cc  hello.hh
test/greet/lgm/: CMakeLists.txt  bye.cc  bye.hh
test/stuff/: CMakeLists.txt  stuffPlugin.cc
test/stuff/stuff/: CMakeLists.txt  stuff.cc  stuff.hh
test/stuff/thing/: CMakeLists.txt  thing.cc  thing.hh
